img path update

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</header>
 		<div class="add-fields">
 				<input type="text" name="inputFieldClassName" id="inputFieldId" maxlength="20" placeholder="TASK TITLE">
-				<img class="addTaskButtonClass" id="addTaskButtonId" src="/images/add.svg" alt="Add List Item">
+				<img class="addTaskButtonClass" id="addTaskButtonId" src="images/add.svg" alt="Add List Item">
 		</div>
 
 		<div class="fields" align="center">
