tab icon and interface screenshot !

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="Kanban Icon" href="/images/k-icon.jpg" type="image/x-icon" />
+	<link rel="Kanban Icon" href="images/k-icon.jpg" type="image/x-icon" />
 	<title>Kanban</title>
 
 	<link rel="stylesheet" href="style.css"/>
